changed getweather action parameter

--- a/source/DirectWeather.Api/DirectWeather.Api.csproj
+++ b/source/DirectWeather.Api/DirectWeather.Api.csproj
@@ -104,6 +104,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ApiRequest.cs" />
+    <Compile Include="Models\Binders\WeatherRequestModelBinder.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\ResponseBuilder.cs" />
     <Compile Include="Models\Temperature.cs" />
