--- a/source/DirectWeather.UnitTests/packages.config
+++ b/source/DirectWeather.UnitTests/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Castle.Core" version="4.2.0" targetFramework="net461" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
