--- a/source/DirectWeather.UnitTests/DirectWeather.UnitTests.csproj
+++ b/source/DirectWeather.UnitTests/DirectWeather.UnitTests.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="OpenWeatherMap\WeatherControllerTests\GetWeatherFixtureElements.cs" />
     <Compile Include="OpenWeatherMap\WeatherControllerTests\GetWeatherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OpenWeatherMap\CountryCodeSourceTests\SearchByNameAssertions.cs" />
