minor fixes, cleanup

--- a/source/DirectWeather.IntegrationTests/DirectWeather.IntegrationTests.csproj
+++ b/source/DirectWeather.IntegrationTests/DirectWeather.IntegrationTests.csproj
@@ -79,6 +79,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetWeatherFixture.cs" />
+    <Compile Include="GetWeatherFixtureElements.cs" />
     <Compile Include="GetWeatherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
