Fixing tests, cleanup

--- a/source/DirectWeather.IntegrationTests/app.config
+++ b/source/DirectWeather.IntegrationTests/app.config
@@ -2,9 +2,7 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <section name="OpenWeatherMapConfiguration" 
-             type="DirectWeather.Source.OpenWeatherMap.OpenWeatherMapConfiguration, DirectWeather.Source.OpenWeatherMap"
-             allowLocation="true" allowDefinition="Everywhere" />
+    <section name="OpenWeatherMapConfiguration" type="DirectWeather.Source.OpenWeatherMap.OpenWeatherMapConfiguration, DirectWeather.Source.OpenWeatherMap" allowLocation="true" allowDefinition="Everywhere" />
   </configSections>
   <OpenWeatherMapConfiguration baseUrl="http://api.openweathermap.org" apiKey="f1ef7127235e700f5f4fee5d61214f4a" temperatureScale="Celsius" />
   <runtime>
