--- a/source/DirectWeather.IntegrationTests/packages.config
+++ b/source/DirectWeather.IntegrationTests/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="Autofac" version="4.8.1" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.4.1" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NodaTime" version="2.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.7.0" targetFramework="net461" />
