--- a/source/DirectWeather.AcceptanceTests/packages.config
+++ b/source/DirectWeather.AcceptanceTests/packages.config
@@ -1,5 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="5.4.1" targetFramework="net461" />
+  <package id="LightBDD.Core" version="2.3.6" targetFramework="net461" />
+  <package id="LightBDD.Framework" version="2.3.6" targetFramework="net461" />
+  <package id="LightBDD.XUnit2" version="2.3.6" targetFramework="net461" />
+  <package id="NodaTime" version="2.3.0" targetFramework="net461" />
+  <package id="Polly" version="5.9.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.13.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.13.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.40.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="xunit" version="2.3.1" targetFramework="net461" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="xunit.analyzers" version="0.7.0" targetFramework="net461" />
+  <package id="xunit.assert" version="2.3.1" targetFramework="net461" />
+  <package id="xunit.core" version="2.3.1" targetFramework="net461" />
+  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net461" />
+  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net461" />
 </packages>
