--- a/source/DirectWeather.Api/DirectWeather.Api.csproj
+++ b/source/DirectWeather.Api/DirectWeather.Api.csproj
@@ -15,7 +15,7 @@
     <RootNamespace>DirectWeather.Api</RootNamespace>
     <AssemblyName>DirectWeather.Api</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -148,7 +148,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50570</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/DirectWeather.Api</IISUrl>
+          <IISUrl>http://localhost:50570/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
