--- a/source/DirectWeather.Api/Web.config
+++ b/source/DirectWeather.Api/Web.config
@@ -12,24 +12,9 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <log4net>
-    <appender name="SlackAppender" type="Log4Slack.SlackAppender, Log4Slack">
-      <WebhookUrl value="https://hooks.slack.com/services/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" />
-      <Channel value="#weather" />
-      <Username value="Api" />
-      <IconUrl value="" />
-      <IconEmoji value=":ghost:" />
-      <AddAttachment value="true" />
-      <AddExceptionTraceField value="true" />
-      <UsernameAppendLoggerName value="true" />
-      <LinkNames value="false" />
-      <mapping>
-        <level value="INFO" />
-        <backColor value="SkyBlue" />
-      </mapping>
-    </appender>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <maximumFileSize value="5MB" />
-      <file value="C:\temp\md_web_api.log" />
+      <file value="C:\temp\directe_weather_api.log" />
       <appendToFile value="true" />
       <maxSizeRollBackups value="5" />
       <layout type="log4net.Layout.PatternLayout">
@@ -38,8 +23,7 @@
     </appender>
     <root>
       <level value="All" />
-      <appender-ref ref="SlackAppender" />
-      <appender-ref ref="RollingFileAppender" />
+      <!--<appender-ref ref="RollingFileAppender" />-->
     </root>
   </log4net>
   <runtime>
